Fixes Markdown image height.
The height was being fixed and led to squishing of images when the viewport got too small.

--- a/src/www/styles/md.css
+++ b/src/www/styles/md.css
@@ -81,6 +81,7 @@
 .md img {
   display: block;
   max-width: 100%;
+  height: auto;
 
   /* Center the image horizontally. */
   margin: auto;
